# word2vec

./: CMakeLists.txt  distance.c  word2vec.c
